--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
+    "express-winston": "^4.2.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
